# cycles-sandbox

./: .gitignore  README.md
demo/: README.md
noir/: README.md
noir/enc-flowcheck/src/: main.nr
noir/flowcheck/: Nargo.toml  Prover.toml
noir/flowcheck/src/: main.nr
noir/hashing/src/: main.nr
noir/merkle_flowcheck/: Nargo.toml
noir/merkle_flowcheck/src/: main.nr
noir/raw-flowcheck/: Cargo.toml  gen_cycle.py
noir/raw-flowcheck/src/: main.rs  merkle.rs
noir/sortedlists/src/: main.nr
risc0-cw-verifier/: Cargo.toml  README.md
risc0-cw-verifier/src/: main.rs
risczero/: Cargo.toml
risczero/host/: Cargo.toml
risczero/host/src/: main.rs
risczero/methods/: Cargo.toml
risczero/methods/guest/: Cargo.toml
risczero/methods/guest/src/: main.rs
risczero/mtcs-core/: Cargo.toml
risczero/mtcs-core/src/: lib.rs
zk/arkworks/: Cargo.toml
zk/arkworks/cw/: Cargo.toml  NOTICE  deploy-contract.sh
zk/arkworks/cw/src/: contract.rs  msg.rs  state.rs
zk/arkworks/gramine/: Cargo.toml  README.md  arkworks-gramine.manifest.template
zk/arkworks/gramine/benches/: output.rs  settlement.rs
zk/arkworks/gramine/proptest-regressions/output/: proof.txt
zk/arkworks/gramine/proptest-regressions/settlement/: proof.txt
zk/arkworks/gramine/src/: canonical.rs  encryption.rs  lib.rs  main.rs  nullifier.rs  output.rs  proof_bundle.rs  proof_params.rs  settlement.rs  traits.rs
zk/arkworks/gramine/src/encryption/: r1cs.rs
zk/arkworks/gramine/src/note/: mod.rs  r1cs.rs
zk/arkworks/gramine/src/output/: proof.rs
zk/arkworks/gramine/src/settlement/: proof.rs
zk/arkworks/src/: contract.rs  error.rs  msg.rs
zk/arkworks/wasm/: Cargo.toml  INTEGRATION.md  README.md  build.sh  package-lock.json  package.json
zk/arkworks/wasm/js/: arkworks.js
zk/arkworks/wasm/src/: lib.rs
zk/arkworks/wasm/src/output/: proof.rs
zk/arkworks/zkprover/: Cargo.toml
zk/noir/: README.md
zk/noir/flowcheck/: Nargo.toml
zk/noir/gramine-noir-prover/: Cargo.toml  README.md  gramine-noir-prover.manifest.template
zk/noir/gramine-noir-prover/src/: main.rs
zk/noir/hashing/: Nargo.toml
zk/noir/proofofkey/: Nargo.toml
zk/noir/proofofkey/src/: main.nr
zk/noir/sortedlists/: plot.py  run_benchmark.sh
zk/risczero/: Cargo.toml
zk/risczero/host/: Cargo.toml
zk/risczero/host/src/: main.rs
zk/risczero/methods/guest/: Cargo.toml
zk/risczero/methods/guest/src/: main.rs
zk/sp1/sp1-cw/: Cargo.toml  README.md  deploy-contract.sh
zk/sp1/sp1-cw/src/: contract.rs  error.rs  lib.rs  msg.rs
zk/sp1/sp1-cw/src/groth16/: converter.rs  error.rs  mod.rs  verify.rs
zk/sp1/sp1-gramine/: Cargo.toml  README.md  sp1-gramine.manifest.template
zk/sp1/sp1-gramine/src/: main.rs
