[workspace]

resolver = "2"

members = [
    "mtcs-core",
    "host",
    "methods",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

#[patch.crates-io]
#risc0-zkvm = { git = "https://github.com/risc0/risc0" }
