[package]
name = "zk-cw"
version = "0.1.0"
authors = ["Shoaib Ahmed <sufialhussaini@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", default-features = false, features = [
    "cosmwasm_1_4",
    # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
    # "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }

ark-groth16 = { default-features = false, version = "0.4.0" }
ark-relations = { default-features = false, version = "0.4" }
ark-serialize = { default-features = false, version = "0.4.2" }
ark-snark = { default-features = false, version = "0.4.0" }
ark-bls12-381 = { default-features = false, features = ["curve"], version = "0.4.0" }
ark-ec = { default-features = false, version = "0.4.0" }

[dev-dependencies]
