[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "mtcs-check"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.15.2", default-features = false }
mtcs-core = { path = "../../mtcs-core", default-features = false }
