[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "mtcs-check"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.20.1", default-features = false, features = [ "std" ] }
mtcs-core = { path = "../../mtcs-core", default-features = false }
ecies = { version = "0.2.3", default-features = false, features = ["pure"] }
serde_json = { version = "1.0.96", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false }
