[package]
version = "0.1.0"
name = "arkworks-gramine"
edition = "2021"

[dependencies]
anyhow                           = { version = "1.0.94", default-features = false }
ark-crypto-primitives            = { version = "0.4.0", default-features = false, features = ["merkle_tree", "r1cs"] }
arkworks-merkle-tree             = { git = "https://github.com/hu55a1n1/arkworks-merkle-tree.git", branch = "dangush/poseiden" }
ark-ff                           = { version = "0.4.0", default-features = false }
ark-groth16                      = { version = "0.4.0", default-features = false }
ark-serialize                    = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-r1cs-std                     = { version = "0.4.0", default-features = false }
ark-relations                    = { version = "0.4.0", default-features = false }
ark-snark                        = { version = "0.4.0", default-features = false }
ark-std                          = { version = "0.5.0" }
base64                           = { version = "0.21.7", default-features = false }
blake2b_simd                     = { version = "1.0.2", default-features = false }
decaf377                         = { version = "0.10.1" }
decaf377-fmd                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
decaf377-ka                      = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
decaf377-rdsa                    = { version = "0.11.0" }
hex                              = { version = "0.4.3", default-features = false }
once_cell                        = { version = "1.20.2", default-features = false }
penumbra-asset                   = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-keys                    = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-num                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-proof-params            = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-proof-setup            = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-proto                   = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-shielded-pool           = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-tct                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
poseidon377                      = { version = "1.2.0", default-features = false }
poseidon-parameters              = { version = "1.1.0" }
rand_core                        = { version = "0.6.4", default-features = false }
serde                            = { version = "1.0.216", features = ["derive"], default-features = false }
tracing                          = { version = "0.1.41", default-features = false }
sha2                             = { version = "0.10.8", default-features = false }
bech32                           = { version = "0.9.1", default-features = false }
ark-ec = "0.5.0"

[dev-dependencies]
proptest                         = { version = "1" }
criterion = { version = "0.3", features = ["html_reports"] }


[lib]
name = "arkworks_gramine"
path = "src/lib.rs"

[[bench]]
name = "settlement"
harness = false

[[bench]]
name = "output"
harness = false

[features]
bundled-proving-keys = []

[patch.crates-io]
decaf377                         = { git = "https://github.com/hu55a1n1/decaf377.git" }

