[package]
version = "0.1.0"
name = "arkworks-gramine"
edition = "2021"

[[bin]]
name = "paramgen"
path = "src/main.rs"

[dependencies]
anyhow                           = { version = "^1.0.75", default-features = false }
ark-crypto-primitives            = { version = "0.4.0", default-features = false, features = ["merkle_tree", "r1cs"] }
arkworks-merkle-tree             = { git = "https://github.com/hu55a1n1/arkworks-merkle-tree.git", branch = "dangush/poseiden" }
ark-ff                           = { version = "0.4.0", default-features = false }
ark-groth16                      = { version = "0.4.0", default-features = false }
ark-serialize                    = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-r1cs-std                     = { version = "0.4.0", default-features = false }
ark-relations                    = { version = "0.4.0", default-features = false }
ark-snark                        = { version = "0.4.0", default-features = false }
base64                           = { version = "0.21.7", default-features = false }
blake2b_simd                     = { version = "1.0.2", default-features = false }
decaf377                         = { git = "https://github.com/hu55a1n1/decaf377.git" }
decaf377-ka                      = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
decaf377-fmd                     = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
decaf377-rdsa                    = { git = "https://github.com/dangush/decaf377-rdsa.git" }
hex                              = { version = "0.4.3", default-features = false }
once_cell                        = { version = "1.20.2", default-features = false }
penumbra-asset                   = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-keys                    = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-num                     = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-proof-params            = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-proof-setup             = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-proto                   = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-shielded-pool           = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-tct                     = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
poseidon377                      = { git = "https://github.com/dangush/poseidon377.git", default-features = false}
poseidon-parameters              = { git = "https://github.com/dangush/poseidon377.git" }
rand_core                        = { version = "0.6.4", default-features = false }
serde                            = { version = "1.0.216", features = ["derive"], default-features = false }
tracing                          = { version = "0.1.41", default-features = false }

[dev-dependencies]
proptest                         = { version = "1" }
rand                             = { version = "0.8.5" }
serde_json                       = { version = "1.0.135" }

[patch.crates-io]
decaf377                         = { git = "https://github.com/hu55a1n1/decaf377.git" }
poseidon377                      = { git = "https://github.com/dangush/poseidon377.git" }
poseidon-parameters              = { git = "https://github.com/dangush/poseidon377.git" }