[package]
name = "arkworks-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["getrandom"] }
ark-std = { version = "0.4.0", default-features = false }

# Core Arkworks dependencies
anyhow                           = { version = "1.0.94", default-features = false }
ark-ff                           = { version = "0.4.0", default-features = false }
ark-groth16                      = { version = "0.4.0", default-features = false }
ark-serialize                    = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-r1cs-std                     = { version = "0.4.0", default-features = false }
ark-relations                    = { version = "0.4.0", default-features = false }
ark-snark                        = { version = "0.4.0", default-features = false }
base64                           = { version = "0.21.7", default-features = false }
blake2b_simd                     = { version = "1.0.2", default-features = false }
decaf377                         = { version = "0.10.1", default-features = true }
decaf377-fmd                     = { version = "0.80.9", default-features = false }
decaf377-ka                      = { version = "0.80.9", default-features = false }
hex                              = { version = "0.4.3", default-features = false }
once_cell                        = { version = "1.20.2", default-features = false }
penumbra-asset                   = { version = "0.80.9", default-features = true }
penumbra-keys                    = { version = "0.80.9", default-features = true }
penumbra-proof-params            = { version = "0.80.9", default-features = false }
penumbra-num                     = { version = "0.80.9", default-features = false }
penumbra-proto                   = { version = "0.80.9", default-features = false }
penumbra-shielded-pool           = { version = "0.80.9", default-features = false }
penumbra-tct                     = { version = "0.80.9", default-features = false }
poseidon377                      = { version = "1.2.0", default-features = false }
rand_core                        = { version = "0.6.4", default-features = false }
serde                            = { version = "1.0.216", features = ["derive"], default-features = false }
tracing                          = { version = "0.1.41", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
proptest = { version = "1", default-features = false } # Remove std features
penumbra-num = { version = "0.80.9", default-features = false }

[features]
default = ["std"]
std = [
    "anyhow/std",
    "ark-ff/std",
    "ark-std/std",
    "proptest/std"
]

# Keep existing patches
[patch.crates-io]
decaf377-fmd                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
decaf377-ka                      = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-asset                   = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-keys                    = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-num                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-proof-params            = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-proto                   = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-shielded-pool           = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-sct                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-tct                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }