[package]
name = "sp1-cw"
version = "0.1.0"
authors = ["hu55a1n1 <sufialhussaini@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
bincode = { version = "1.3.3", default-features = false }
cosmwasm-schema = { version = "2.1.0", default-features = false }
cosmwasm-std = { version = "2.1.0", default-features = false, features = ["std"] }
itertools = { version = "0.13.0", default-features = false }
p3-field = { version = "=0.1.4-succinct", default-features = false }
serde = { version = "1.0.213", default-features = false, features = ["derive"] }
sp1-primitives = { version = "3.0.0-rc4", default-features = false }
sp1-core-machine = { version = "3.0.0-rc4", default-features = false }
sp1-prover = { version = "3.0.0-rc4", default-features = false }
sp1-stark = { version = "3.0.0", default-features = false }
