[package]
name = "sp1-cw"
version = "0.1.0"
authors = ["hu55a1n1 <sufialhussaini@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-crypto = { version = "2.1.4", default-features = false }
cosmwasm-schema = { version = "2.1.0", default-features = false }
cosmwasm-std = { version = "2.1.0", default-features = false, features = ["std", "cosmwasm_2_1"] }
hex-literal = "0.4.1"
sp1-verifier = { path = "../../../../sp1/crates/verifier", default-features = false }
bincode = { version = "1.3.3", default-features = false }

bn = { git = "https://github.com/yuwen01/bn", branch = "yuwen/sp1-flag", package = "substrate-bn" }
sha2 = { version = "0.10.8", default-features = false }
thiserror-no-std = "2.0.2"
rand = { version = "0.8.5", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", default-features = false }
