[package]
version = "0.1.0"
name = "sp1-gramine"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", default-features = false }
cosmwasm-std = { version = "2.1.0", default-features = false }
sp1-sdk = "3.0.0-rc4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }

sp1-cw = { path = "../sp1-cw", default-features = false, features = ["library"] }
